[package]
name = "rustreq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
structopt = { version = "0.3.13" }
url = { version = "2.2.2" }
futures = { version = "0.3" }
serde_json = { version = "1.0.59" }
serde_derive = { version = "1.0.132" }